# weave

./: .gitignore  README.md  setup.cfg  setup.cfg.bak  setup.py  tox.ini
weave/: __init__.py  benchmark.py  test.py  test_home.py  test_napari.py  util.py  weave.py  weave2.py  weave3.py  weave4.py  weave5.py  weave_read.py  weave_read2.py  weave_test.py
weave/_tests/: test_reader.py
weeve/: __init__.py  _version.py
