[metadata]
name = weave

author = Alan M Watson
author_email = alan.watson@pitt.edu
url = https://github.com/CBI-PITT/weave
license = BSD-3-Clause
description = A file format for storage of petascale image data 
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/CBI-PITT/weave
    Documentation = https://github.com/CBI-PITT/weave#README.md
    Source Code = https://github.com/CBI-PITT/weave
    User Support = https://github.com/CBI-PITT/weave/issues

[options]
packages = find:
python_requires = >=3.8
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
	napari[all]
	numpy
	scikit-image
	matplotlib
	h5py
	tifffile
	imagecodecs
	zarr
	dask
	

[options.entry_points] 
napari.plugin = 
    weave = weave